Cadastro de visita implementado e correção de bugs feita
A funcionalidade de cadastro de visitas foi implementada, e bugs relacionados ao cadastro de proprietarios e animais resolvidos

--- a/Pungo Andongo/src/pungo/andongo/RegistarAnimal.form
+++ b/Pungo Andongo/src/pungo/andongo/RegistarAnimal.form
@@ -191,6 +191,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtProp">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="dxao"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel6">
       <Properties>
