--- a/Pungo Andongo/src/pungo/andongo/ListarAnimal.form
+++ b/Pungo Andongo/src/pungo/andongo/ListarAnimal.form
@@ -117,8 +117,8 @@
                 <Column editable="false" title="Nome do Animal" type="java.lang.Object"/>
                 <Column editable="false" title="Especie" type="java.lang.Object"/>
                 <Column editable="false" title="Ra&#xe7;a" type="java.lang.Object"/>
-                <Column editable="true" title="Idade" type="java.lang.Object"/>
-                <Column editable="true" title="Propriet&#xe1;rio" type="java.lang.Object"/>
+                <Column editable="false" title="Idade" type="java.lang.Object"/>
+                <Column editable="false" title="Propriet&#xe1;rio" type="java.lang.Object"/>
               </Table>
             </Property>
           </Properties>
