--- a/Pungo Andongo/src/pungo/andongo/Menu_Animal.form
+++ b/Pungo Andongo/src/pungo/andongo/Menu_Animal.form
@@ -34,7 +34,6 @@
                   <Component id="jLabel2" alignment="2" min="-2" pref="80" max="-2" attributes="0"/>
                   <Component id="jLabel1" alignment="2" min="-2" pref="158" max="-2" attributes="0"/>
                   <Component id="jButton1" alignment="2" min="-2" pref="167" max="-2" attributes="0"/>
-                  <Component id="jButton2" alignment="2" min="-2" pref="167" max="-2" attributes="0"/>
                   <Component id="jButton3" alignment="2" min="-2" pref="167" max="-2" attributes="0"/>
                   <Component id="jImagem" alignment="2" min="-2" pref="180" max="-2" attributes="0"/>
                   <Component id="jButton4" alignment="2" min="-2" pref="167" max="-2" attributes="0"/>
@@ -55,12 +54,10 @@
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="jButton3" min="-2" pref="38" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="jButton2" min="-2" pref="38" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="jButton4" min="-2" pref="38" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
               <Component id="jImagem" min="-2" pref="152" max="-2" attributes="0"/>
-              <EmptySpace pref="52" max="32767" attributes="0"/>
+              <EmptySpace pref="64" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -100,20 +97,6 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
       </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="jButton2">
-      <Properties>
-        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="33" green="66" red="0" type="rgb"/>
-        </Property>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Verdana" size="12" style="0"/>
-        </Property>
-        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="ff" red="ff" type="rgb"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value="Visitas por animal"/>
-      </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="jButton3">
       <Properties>
