--- a/Pungo Andongo/src/pungo/andongo/Menu_Visitas.form
+++ b/Pungo Andongo/src/pungo/andongo/Menu_Visitas.form
@@ -157,7 +157,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Consultas"/>
+        <Property name="text" type="java.lang.String" value="Qtd de Visitas Realizadas por Animal"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton4ActionPerformed"/>
