--- a/Pungo Andongo/src/pungo/andongo/RegistarProprietario.form
+++ b/Pungo Andongo/src/pungo/andongo/RegistarProprietario.form
@@ -38,25 +38,23 @@
                           <Component id="jImagem" min="-2" pref="180" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
                       </Group>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="1" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jButton1" alignment="0" min="-2" pref="663" max="-2" attributes="0"/>
-                                  <Component id="txtContacto" alignment="0" min="-2" pref="663" max="-2" attributes="0"/>
-                                  <Component id="txtNome" alignment="0" min="-2" pref="663" max="-2" attributes="0"/>
-                              </Group>
-                              <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
+                      <Group type="102" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+                              <Component id="jButton1" alignment="0" min="-2" pref="663" max="-2" attributes="0"/>
+                              <Component id="txtContacto" alignment="0" min="-2" pref="663" max="-2" attributes="0"/>
+                              <Component id="txtNome" alignment="0" min="-2" pref="663" max="-2" attributes="0"/>
                           </Group>
-                          <Group type="102" alignment="1" attributes="0">
-                              <Component id="jLabel3" min="-2" pref="82" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="613" max="-2" attributes="0"/>
-                          </Group>
+                          <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="200" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="1" attributes="0">
+                      <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="525" max="-2" attributes="0"/>
                   </Group>
               </Group>
           </Group>
@@ -129,7 +127,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
-        <Property name="text" type="java.lang.String" value="CONTACTO"/>
+        <Property name="text" type="java.lang.String" value="CONTACTO(Telefone ou E-Mail)"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="jButton2">
