--- a/Pungo Andongo/src/pungo/andongo/RegistarAnimal.form
+++ b/Pungo Andongo/src/pungo/andongo/RegistarAnimal.form
@@ -59,11 +59,11 @@
                                       </Group>
                                   </Group>
                               </Group>
+                              <Component id="jLabel6" alignment="0" min="-2" pref="307" max="-2" attributes="0"/>
                               <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
                                   <Component id="txtNasc" alignment="0" max="32767" attributes="0"/>
                                   <Component id="jButton3" alignment="0" pref="685" max="32767" attributes="0"/>
                               </Group>
-                              <Component id="jLabel6" alignment="0" min="-2" pref="307" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -112,11 +112,11 @@
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="txtNasc" min="-2" pref="34" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Component id="txtNasc" min="-2" pref="40" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
               <Component id="jButton3" min="-2" pref="36" max="-2" attributes="0"/>
-              <EmptySpace pref="22" max="32767" attributes="0"/>
+              <EmptySpace pref="29" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -222,12 +222,7 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JFormattedTextField" name="txtNasc">
-      <Properties>
-        <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
-          <Format format="y-MM-dd" subtype="-1" type="1"/>
-        </Property>
-      </Properties>
+    <Component class="javax.swing.JTextField" name="txtNasc">
     </Component>
   </SubComponents>
 </Form>
